<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.bukola.TicTacTo.two_player_names">

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start2p"
        android:background="#FFA726"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:singleLine="false"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/p1name"
        android:layout_marginTop="48dp"
        android:hint="@string/player_1_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/p2name"
        android:hint="@string/player_2_name"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/p1name"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
