<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.bukola.TicTacTo.two_player_selector">

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/single_device"
        android:id="@+id/singleplay2p"
        android:background="#FFA726"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/double_device"
        android:id="@+id/doubleplay2p"
        android:background="#FFA726"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Highscore"
        android:id="@+id/high2P"
        android:background="#FFA726"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/doubleplay2p"
        android:layout_alignStart="@+id/doubleplay2p"
        android:layout_marginBottom="83dp" />
</RelativeLayout>
